@@ -7,6 +7,13 @@ L["ChangeLog"] = [[
 <html>
 <body>
 <p>
+<lime>2017/03/27 v170 : </lime>
+</p><br/>
+<p>
+    1. 团队面板加入了“按下鼠标触发”菜单项，勾选时，动作按下时就会触发施法。
+</p>
+<br/><br/>
+<p>
 <lime>2016/12/10 v154 : </lime>
 </p><br/>
 <p>
