@@ -7,6 +7,13 @@ L["ChangeLog"] = [[
 <html>
 <body>
 <p>
+<lime>2017/03/27 v170 : </lime>
+</p><br/>
+<p>
+    1. 團隊面板加入了“按下鼠標觸發”菜單項，勾選時，動作按下時就會觸發施法。
+</p>
+<br/><br/>
+<p>
 <lime>2016/12/10 v154 : </lime>
 </p><br/>
 <p>
